kubernetes/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana-app
  ports:
    - port: 9095
      targetPort: 3000
  type: ClusterIP
