kubernetes/item-keeper-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: item-keeper-admin
spec:
  selector:
    app: item-keeper-admin-app
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
