kubernetes/item-keeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: item-keeper
spec:
  selector:
    app: item-keeper-app
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
