kubernetes/postgres-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
spec:
  selector:
    app: postgres-exporter-app
  ports:
    - port: 9187
      targetPort: 9187
  type: ClusterIP
